jobs detail page alignment fixed

--- a/src/components/jobsDetail/jobDetail.scss
+++ b/src/components/jobsDetail/jobDetail.scss
@@ -3,32 +3,40 @@
   box-shadow: 0px 3.98px 23.9px rgba(212, 199, 199, 0.25) !important;
   border-radius: 15px !important;
   height: 215px;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-  .personal-info {
+   display: flex;
+   justify-content: space-evenly;
+   padding: 30px 0px;
+  
+  .personal-info{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
-    .info {
-      margin-bottom: 14px;
-      .designation {
-        font-family: DM Sans;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 12px;
-        line-height: 16px;
-        color: #4b686e;
-        margin-bottom: 8px;
-      }
-      .personal-title {
-        font-family: DM Sans;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 16px;
-        color: #4b686e;
-      }
+    flex-direction: column;
+    height: 100%;
+  }
+  .info {
+    display: inline-block;
+    margin-bottom: 14px;
+    .designation {
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 16px;
+      color: #4b686e;
+      margin-bottom: 8px;
     }
+    
+    .personal-title {
+      font-family: DM Sans;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 16px;
+      color: #4b686e;
+    }
+  }
+  .info:last-child{
+    max-width: 100px;
   }
 }
